fix side and top overlapping

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -12,10 +12,12 @@ $ambire-dark-blue: #6000FF;
 $ambire-purple: #AF50FF;
 
 $sidebar-desktop-width: 280px;
+$sidebar-small-breakpoint: 1400px;
 $sidebar-desktop-small-width: 120px;
 $sidebar-mobile-height: 80px;
 $topbar-height: 90px;
 $topbar-mobile-height: 70px;
+$mobile-breakpoint-max-width: 800px;
 
 $text-color:#FFF;
 $text-container-color:mix($text-color, $panel-background-color, 60%);
